# roboptim-trajectory

./: .gitignore  .gitmodules  .travis.build.sh  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  NEWS  README  README.md  configure.ac  roboptim-trajectory.spec.in
build-aux/: pkg-config.pc.in  roboptim-core.m4
doc/: Doxyfile.extra.in  Doxyfile.in  Makefile  Makefile.am  bspline.tex  cubic-b-spline.tex  sf-upload.sh.in
doc/pictures/: basis-functions.fig
doxygen/HEAD/: a00001.html  a00002.html  a00003.html  a00003.js  a00004.html  a00004.js  a00005.html  a00005.js  a00006.html  a00006.js  a00007.html  a00007.js  a00008.html  a00008.js  a00009.html  a00009.js  a00010.html  a00010.js  a00011.html  a00011.js  a00012.html  a00012.js  a00013.html  a00013.js  a00014.html  a00014.js  a00015.html  a00015.js  a00016.html  a00016.js  a00017.html  a00017.js  a00018.html  a00018.js  a00019.html  a00019.js  a00020.html  a00020.js  a00021.html  a00021.js  (+299 more)
doxygen/HEAD/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_5.js  all_6.js  all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_69.js  all_6a.js  all_6b.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_7.js  all_70.js  all_72.js  all_73.js  all_74.js  all_75.js  all_76.js  all_7e.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  (+156 more)
doxygen/v3.0/: a00001.html  a00002.html  a00006.html  a00006.js  a00007.html  a00008.html  a00009.html  a00010.js  a00011.html  a00012.html  a00014.html  a00014.js  a00016.html  a00016.js  a00017.html  a00017.js  a00018.html  a00019.html  a00019.js  a00020.js  a00021.js  a00022.html  a00022.js  a00024.html  a00025.js  a00026.html  a00027.js  a00028.html  a00030.html  a00034.html  a00035.html  a00036.html  a00046.html  a00047.html  a00048.html  a00051.html  a00052.html  a00053.html  a00058.html  a00059.html  (+71 more)
doxygen/v3.0/search/: all_63.js  all_64.js  all_6c.js  all_6d.js  all_6f.js  all_74.js  all_76.js  classes_63.js  classes_64.js  defines_6f.js  files_64.js  files_70.js  files_73.js  files_76.js  functions_61.js  functions_62.js  functions_63.js  functions_69.js  functions_6b.js  search.js  (+11 more)
doxygen/v3.1/: a00001.html  a00002.html  a00003.html  a00004.html  a00004.js  a00005.html  a00005.js  a00006.html  a00006.js  a00007.html  a00007.js  a00008.html  a00009.html  a00009.js  a00010.html  a00011.html  a00012.html  a00012.js  a00013.html  a00014.html  a00015.html  a00016.html  a00017.html  a00018.html  a00019.html  a00019.js  a00020.html  a00020.js  a00021.html  a00022.html  a00023.html  a00023.js  a00024.html  a00025.html  a00025.js  a00026.html  a00026.js  a00027.html  a00028.html  a00028.js  (+157 more)
doxygen/v3.2/: a00001.html  a00002.html  a00003.html  a00004.html  a00004.js  a00005.html  a00006.html  a00006.js  a00007.html  a00007.js  a00008.html  a00009.html  a00010.html  a00010.js  a00011.html  a00011.js  a00012.html  a00013.html  a00013.js  a00014.html  a00015.html  a00016.html  a00016.js  a00017.html  a00018.html  a00018.js  a00019.html  a00019.js  a00020.html  a00020.js  a00021.html  a00021.js  a00022.html  a00022.js  a00023.html  a00024.html  a00024.js  a00025.html  a00025.js  a00026.html  (+169 more)
include/: Makefile.am
include/roboptim/: trajectory.hh
include/roboptim-trajectory/: basis-function.hh  bspline.hh  free-time-trajectory.hh  free-time-trajectory.hxx  fwd.hh  spline.hh  state-cost.hh  state-cost.hxx  sum-cost.hh  sum-cost.hxx  trajectory-cost.hh  trajectory-cost.hxx  trajectory.hh  trajectory.hxx
include/roboptim/trajectory/: anthropomorphic-cost-function.hh  anthropomorphic-cost-function.hxx  b-spline.hh  b-spline.hxx  constrained-b-spline.hh  constrained-b-spline.hxx  constraint-b-spline.hh  constraint-b-spline.hxx  constraints-over-splines.hh  constraints-over-splines.hxx  cubic-b-spline.hh  cubic-b-spline.hxx  fixed-point-state-function.hh  fixed-point-state-function.hxx  free-time-trajectory.hh  free-time-trajectory.hxx  freeze.hh  freeze.hxx  frontal-speed.hh  frontal-speed.hxx  fwd.hh  jerk-over-splines-factory.hh  jerk-over-splines-factory.hxx  limit-omega.hh  limit-omega.hxx  limit-speed.hh  limit-speed.hxx  orthogonal-speed.hh  orthogonal-speed.hxx  polynomial-3.hh  polynomial.hh  polynomial.hxx  problem-over-splines-factory.hh  problem-over-splines-factory.hxx  spline-length.hh  spline.hh  stable-point-state-function.hh  stable-point-state-function.hxx  stable-time-point.hh  state-cost.hh  (+12 more)
include/roboptim/trajectory/visualization/: b-spline-matplotlib.hh  cubic-b-spline-matplotlib.hh  limit-speed.hh  matplotlib.hh  speed.hh  trajectory.hh
src/: CMakeLists.txt  Makefile.am  basis-function.cc  bspline.cc  cubic-b-spline.cc  debug.hh  doc.hh  frontal-speed.cc  limit-speed.cc  matplotlib.cc  orthogonal-speed.cc  polynomial-3.cc  spline-length.cc  spline.cc  trajectory.cc
src/spline/: basis_function.cpp  basis_function.h  bspline.cpp  bspline.h
tests/: CMakeLists.txt  Makefile.am  anthropomorphic-cost-function-case-1.cc  anthropomorphic-cost-function-case-2.cc  anthropomorphic-cost-function-case-3.cc  anthropomorphic-cost-function-case-3.stdout  anthropomorphic-cost-function-case-4.cc  anthropomorphic-cost-function-case-5.cc  anthropomorphic-cost-function-case-6.cc  anthropomorphic-cost-function.cc  anthropomorphic-cost-function.hh  atlocal.in  b-spline-3.stdout  b-spline-5.stdout  b-spline-matplotlib.cc  b-spline-matplotlib.stdout  b-spline.cc  common.hh  complex-cost-function.cc  constrained-b-spline-4.stdout  constrained-b-spline.cc  constraint-b-spline.cc  constraints-over-splines.cc  constraints-over-splines.stdout  cubic-b-spline-2.cc  cubic-b-spline-2.stdout  cubic-b-spline-gradient.cc  cubic-b-spline-gradient.stdout  cubic-b-spline-matplotlib.cc  cubic-b-spline-matplotlib.stdout  cubic-b-spline.cc  cubic-b-spline.stdout  fixed-point-state-function.cc  fixed-point-state-function.stdout  free-time-trajectory-stable-time-point.cc  free-time-trajectory-stable-time-point.stdout  free-time-trajectory.cc  free-time-trajectory.stdout  log4cxx.xml  package.m4.in  (+25 more)
(+100 files in other folders)
