include $(top_srcdir)/build-aux/init.mk

# --- Distribute and install headers.
nobase_include_HEADERS =					\
	roboptim-trajectory/free-time-trajectory.hh		\
	roboptim-trajectory/free-time-trajectory.hxx		\
	roboptim-trajectory/fwd.hh				\
	roboptim-trajectory/trajectory.hh			\
	roboptim-trajectory/trajectory.hxx			\
	roboptim-trajectory/spline.hh
