include $(top_srcdir)/build-aux/init.mk

# --- Distribute and install headers.
nobase_include_HEADERS =					\
	roboptim/trajectory/free-time-trajectory.hh		\
	roboptim/trajectory/free-time-trajectory.hxx		\
	roboptim/trajectory/freeze.hh				\
	roboptim/trajectory/freeze.hxx				\
	roboptim/trajectory/fwd.hh				\
	roboptim/trajectory/limit-speed.hh			\
	roboptim/trajectory/limit-speed.hxx			\
	roboptim/trajectory/spline.hh				\
	roboptim/trajectory/spline-length.hh			\
	roboptim/trajectory/stable-time-point.hh		\
	roboptim/trajectory/state-cost.hh			\
	roboptim/trajectory/state-cost.hxx			\
	roboptim/trajectory/trajectory-cost.hh			\
	roboptim/trajectory/trajectory-cost.hxx			\
	roboptim/trajectory/trajectory-sum-cost.hh		\
	roboptim/trajectory/trajectory-sum-cost.hxx		\
	roboptim/trajectory/trajectory.hh			\
	roboptim/trajectory/trajectory.hxx

nobase_include_HEADERS +=					\
	roboptim/trajectory/visualization/trajectory.hh