include $(top_srcdir)/build-aux/init.mk

# --- Distribute and install headers.
nobase_include_HEADERS =					\
	roboptim/trajectory.hh

nobase_include_HEADERS +=					\
	roboptim/trajectory/anthropomorphic-cost-function.hh	\
	roboptim/trajectory/anthropomorphic-cost-function.hxx	\
	roboptim/trajectory/free-time-trajectory.hh		\
	roboptim/trajectory/free-time-trajectory.hxx		\
	roboptim/trajectory/freeze.hh				\
	roboptim/trajectory/freeze.hxx				\
	roboptim/trajectory/frontal-speed.hh			\
	roboptim/trajectory/fwd.hh				\
	roboptim/trajectory/limit-omega.hh			\
	roboptim/trajectory/limit-omega.hxx			\
	roboptim/trajectory/limit-speed.hh			\
	roboptim/trajectory/limit-speed.hxx			\
	roboptim/trajectory/orthogonal-speed.hh			\
	roboptim/trajectory/cubic-b-spline.hh			\
	roboptim/trajectory/cubic-b-spline.hxx			\
	roboptim/trajectory/spline-length.hh			\
	roboptim/trajectory/stable-point-state-function.hh	\
	roboptim/trajectory/stable-point-state-function.hxx	\
	roboptim/trajectory/stable-time-point.hh		\
	roboptim/trajectory/state-function.hh			\
	roboptim/trajectory/state-function.hxx			\
	roboptim/trajectory/sys.hh				\
	roboptim/trajectory/trajectory-cost.hh			\
	roboptim/trajectory/trajectory-cost.hxx			\
	roboptim/trajectory/trajectory-sum-cost.hh		\
	roboptim/trajectory/trajectory-sum-cost.hxx		\
	roboptim/trajectory/trajectory.hh			\
	roboptim/trajectory/trajectory.hxx

nobase_include_HEADERS +=					\
	roboptim/trajectory/visualization/limit-speed.hh	\
	roboptim/trajectory/visualization/trajectory.hh		\
	roboptim/trajectory/visualization/speed.hh
